packages/svelte/tests/compiler-errors/samples/runes-wrong-props-args/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'invalid_rune_args',
		message: '`$props` cannot be called with arguments'
	}
});
